--- a/codetextfield/src/main/res/layout/code_text_field_edit_text.xml
+++ b/codetextfield/src/main/res/layout/code_text_field_edit_text.xml
@@ -8,4 +8,4 @@
     android:cursorVisible="false"
     android:inputType="number"
     android:textSize="0sp"
-    tools:ignore="Autofill,LabelFor,ResourceName,TextFields" />
+    tools:ignore="Autofill,LabelFor,ResourceName,TextFields,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
